--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -50,7 +50,7 @@
 \begin{document}
 
 
-\title{\goat: Automated Dynamic Concurrency Analysis and Testing for Go}
+\title{\goat: Automated Concurrency Analysis and Debugging Tool for Go}
 
 
 %\author{\IEEEauthorblockN{Saeed Taheri}
